<resources>
    <string name="app_name">ERP_Mobile_3</string>
    <string name="tasks_name">Tasks</string>
    <string name="worksheets_name">Worksheets</string>
    <string name="settings_name">Settings</string>
    <string name="status_in_progress">In progress</string>
    <string name="date_hint">Date</string>
    <string name="counterpart_hint">Counterpart</string>
    <string name="length_hint">Length</string>
    <string name="description_hint">Description</string>
    <string name="status_hint">Status</string>
    <string name="setting_enable_fab_on_main_screen">Enable FAB on the home screen</string>
    <string name="setting_online_mode">Enable online mode</string>
    <string name="setting_check_connection">Check connection</string>
    <string name="setting_check_connection_status">Connection status</string>
    <string name="setting_update_catalogues">Update catalogues</string>
    <string name="setting_update_catalogues_status">Update catalogues status</string>
    <string name="setting_connection_settings">Connection settings</string>
    <string name="setting_user_hint">User</string>
    <string name="setting_username_hint">Username</string>
    <string name="setting_password_hint">Password</string>
    <string name="setting_host_address">Host address</string>
    <string name="waiting_for_status">Waiting for status</string>
    <string name="starting_download">Starting download</string>
    <string name="update_status_done">Done</string>
    <string name="update_status_in_progress">In progress</string>
    <string name="update_status_error">Error</string>
    <string name="label_home_fragment">Home</string>
    <string name="label_settings_fragment">Settings</string>
    <string name="label_tasks_fragment">Tasks</string>
    <string name="label_worksheets_fragment">Worksheets</string>
    <string name="label_worksheet_fragment">Worksheet</string>
    <string name="label_search_fragment">Search</string>
    <string name="user_hint">User</string>
    <string name="user_name_default">Default user name</string>
    <string name="label_task_fragment">Task</string>
    <string name="title_search">Search</string>
    <string name="notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_channel_name" translatable="false">firebase</string>
    <string name="notification_title" translatable="false">firebase_title</string>
    <string name="setting_send_token">Send token</string>
    <string name="setting_send_token_status">Send token status</string>
</resources>
