<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.rogoznyak.erp_mobile_3.home.HomeFragment"
        android:label="@string/label_home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
        <action
            android:id="@+id/action_homeFragment_to_worksheetsFragment"
            app:destination="@id/worksheetsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.rogoznyak.erp_mobile_3.tasks.TasksFragment"
        android:label="@string/label_tasks_fragment" >
        <action
            android:id="@+id/action_tasksFragment_to_taskFragment"
            app:destination="@id/taskFragment" />
    </fragment>
    <fragment
        android:id="@+id/worksheetsFragment"
        android:name="com.rogoznyak.erp_mobile_3.worksheets.WorksheetsFragment"
        android:label="@string/label_worksheets_fragment" >
        <action
            android:id="@+id/action_worksheetsFragment_to_worksheetFragment"
            app:destination="@id/worksheetFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.rogoznyak.erp_mobile_3.settings.SettingsFragment"
        android:label="@string/label_settings_fragment" />
    <fragment
        android:id="@+id/worksheetFragment"
        android:name="com.rogoznyak.erp_mobile_3.worksheets.worksheet.WorksheetFragment"
        android:label="@string/label_worksheet_fragment" >
        <action
            android:id="@+id/action_worksheetFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <argument
            android:name="guidWorksheet"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.rogoznyak.erp_mobile_3.search.SearchFragment"
        android:label="@string/label_search_fragment" >
        <argument
            android:name="searchType"
            app:argType="com.rogoznyak.erp_mobile_3.search.SearchType" />
    </fragment>
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.rogoznyak.erp_mobile_3.tasks.task.TaskFragment"
        android:label="TaskFragment" >
        <argument
            android:name="guidTask"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_taskFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_taskFragment_to_searchForUserFragment"
            app:destination="@id/searchForUserFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchForUserFragment"
        android:name="com.rogoznyak.erp_mobile_3.search.searchForUser.SearchForUserFragment"
        android:label="SearchForUserFragment" />
</navigation>